--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ go:
   - 1.15.x
 script:
   curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.35.2
-  golangci-lint
+  golangci-lint run
   go test
